<resources>
    <string name="app_name">Room Database Sample</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="add_record">ADD RECORD</string>
    <string name="all_the_inserted_records">All the inserted records</string>
    <string name="no_records_found">No records found!</string>
    <string name="update_record">Update Record</string>
    <string name="update">Update</string>
    <string name="cancel">CANCEL</string>
</resources>